# awesome-mcp-snippets

./: .env  .gitignore  Makefile  content.db  mcp-server.py  pyproject.toml  server.py
src/: mcp_ollama_client.py  mcp_server.py  mcp_tools.py  server_http.py
test-mcp/: mcp_server.py
test1/: mcp-server-blogs.py  mcp-server-memory.py
test2/: mcp-client.py  mcp-server.py  mcp_ollama_client.py
test3/: mcp_gemini_client.py  mcp_ollama_client.py  server_http.py
test4/: index.py  mcp_ollama_client.py  server_http.py
test5/: content.db  index.py  mcp_ollama_client.py  mcp_tools.py
