[project]
name = "test-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "mcp[cli]>=1.13.1",
    "fastmcp>=0.1.0",
    "uvicorn",
    "httpx",
    "langchain-core",
    "langchain-ollama",
    "langchain-google-genai",
    "dotenv>=0.9.9",
    "ollama>=0.3.0",
]
